feat and fix: mudança na estruttura e criação de Guard/home/login

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,23 +1,1 @@
-<div *ngIf="auth.user$ | async as user; else loginBlock">
-  <h2>Bem-vindo, {{ user.displayName || user.email }}</h2>
-  <img *ngIf="user.photoURL" [src]="user.photoURL" width="50" />
-  <p><button (click)="auth.logout()">Sair</button></p>
-</div>
-
-<ng-template #loginBlock>
-  <h2>Login</h2>
-  <form (submit)="loginWithEmail($event)">
-    <input [(ngModel)]="email" name="email" placeholder="E-mail" />
-    <input
-      [(ngModel)]="password"
-      name="password"
-      placeholder="Senha"
-      type="password"
-    />
-    <button type="submit">Entrar com E-mail</button>
-    <button type="button" (click)="register()">Criar Conta</button>
-  </form>
-
-  <hr />
-  <button (click)="auth.loginWithGoogle()">Login com Google</button>
-</ng-template>
+<router-outlet></router-outlet>
