--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,2 +1,23 @@
-<p>home works!</p>
-<button (click)="logout()">Sair</button>
+<nav class="navbar">
+  <div class="navbar-left">
+    <!-- Adicione links ou logo aqui se desejar -->
+    <span class="navbar-title">NPC Angular</span>
+  </div>
+  <div class="navbar-right">
+    @if (user) {
+      <div class="user-info">
+        @if (user.photoURL) {
+          <img
+            [src]="user.photoURL"
+            alt="Foto do usuário"
+            class="user-photo-online"
+          />
+        }
+        <span class="user-name">{{ user.displayName }}</span>
+        <button class="logout-btn" (click)="logout()">Sair</button>
+      </div>
+    } @else {
+      <span class="not-authenticated">Você não está autenticado.</span>
+    }
+  </div>
+</nav>
