--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+*{
+  font-family: 'Montserrat', sans-serif;
+}
+body, input{
+  background-color: rgb(7, 11, 17);
+}
