fix:retirando o guard

--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -28,6 +28,7 @@
       </button>
     </form>
     <div class="separator"><span>ou</span></div>
+    <button (click)="notPassword()">Entrar sem senha</button>
     <button class="btn google" (click)="auth.loginWithGoogle()">
       <img src="https://www.svgrepo.com/show/475656/google-color.svg" alt="Google" class="icon" /> Entrar com Google
     </button>
